@@ -204,7 +204,7 @@ Hostname=Zabbix server
 #	provided in 'log' or 'logrt' item keys.
 #
 # Mandatory: no
-# Range: 1-1000
+# Range: 1-4000
 # Default:
 # MaxLinesPerSecond=20
 
