@@ -197,7 +197,7 @@ Hostname=Windows host
 #	provided in 'log', 'logrt' or 'eventlog' item keys.
 #
 # Mandatory: no
-# Range: 1-1000
+# Range: 1-4000
 # Default:
 # MaxLinesPerSecond=20
 
